--- a/tools/gui/index.html
+++ b/tools/gui/index.html
@@ -128,10 +128,10 @@
                 </div>
             </div>
             <div class="col-xs-12">
-                <div style="display: none;" class="alert alert-danger" role="alert" id="errorMessage"></divs>
+                <div style="display: none;" class="alert alert-danger" role="alert" id="errorMessage"></div>
             </div>
             <div class="col-xs-12">
-                <div style="display: none;" class="alert alert-info" role="alert" id="infoMessage"></divs>
+                <div style="display: none;" class="alert alert-info" role="alert" id="infoMessage"></div>
             </div>
             <div class="col-xs-12">
                 <div class="panel with-nav-tabs panel-default">
