Added new special characters in docs

--- a/tools/gui/index.html
+++ b/tools/gui/index.html
@@ -115,6 +115,10 @@
                                     <div id="collapse1" class="panel-collapse collapse">
                                         <ul class="list-group">
                                             <li class="list-group-item">EOF</li>
+                                            <li class="list-group-item">NEW_LINE</li>
+                                            <li class="list-group-item">RETURN</li>
+                                            <li class="list-group-item">SPACE</li>
+                                            <li class="list-group-item">TAB</li>
                                             <li class="list-group-item">LOWER_CASE_LETTER</li>
                                             <li class="list-group-item">UPPER_CASE_LETTER</li>
                                             <li class="list-group-item">POSITIVE</li>
